feature: 提示信息补全